@@ -10,7 +10,7 @@ public class UrlUtil{
 
   public static String encode(String url){
     try{
-      return URLEncoder.encode(url, Constants.ENCODING_UTF_8);
+      return URLEncoder.encode(url, Constants.ENCODING_UTF_8.name());
     }catch(UnsupportedEncodingException e){
       return url;
     }
@@ -18,7 +18,7 @@ public class UrlUtil{
 
   public static String decode(String url){
     try{
-      return URLDecoder.decode(url, Constants.ENCODING_UTF_8);
+      return URLDecoder.decode(url, Constants.ENCODING_UTF_8.name());
     }catch(UnsupportedEncodingException e){
       return url;
     }
